--- a/data/business_department/product_list.ipynb
+++ b/data/business_department/product_list.ipynb
@@ -1309,6 +1309,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cf6a549-68e2-40b2-851d-930d4e72a35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product.to_parquet(\"product_type_merged.parquet\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "04151f0c-28b2-4e56-adae-492cd14313a8",
    "metadata": {},
@@ -1376,6 +1386,16 @@
    ],
    "source": [
     "print(df_product.nunique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a840e1-65c8-439c-93ff-8db996c01442",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product.to_parquet(\"product_duplicates_removed.parquet\")"
    ]
   },
   {
@@ -1548,6 +1568,16 @@
     "#removing same product name and product type, keeping only the newly added data\n",
     "df_product = df_product.drop_duplicates(subset=[\"product_name\",\"product_type\"], keep=\"last\")\n",
     "print(df_product.nunique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e15089cf-4e58-4a4e-84f5-e2fbe3c86efd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product.to_parquet(\"product_type_changes.parquet\")"
    ]
   },
   {
@@ -1905,6 +1935,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f86c0d75-5112-4a4a-8fa6-ef4a8a308b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product.to_parquet(\"product_upper.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c99cff0b-24ff-41d6-a125-5d77a1c98ad7",
    "metadata": {},
    "outputs": [],
    "source": []
