--- a/data/business_department/product_list.ipynb
+++ b/data/business_department/product_list.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 92,
    "id": "40fe55aa-9cd8-4a9d-ac2c-2c206817e3a0",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 93,
    "id": "05c6f1c3-3d98-4af1-9e0b-afcb85dbdb5d",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 94,
    "id": "a720d91e-a587-41ea-8864-360435f4f10e",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 95,
    "id": "0451d5d8-9e56-4858-8318-d0b0d6accfa6",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 96,
    "id": "1b13f573-1332-4b01-bbf7-a42a113f4464",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "9  readymade_breakfast   6.78  "
       ]
      },
-     "execution_count": 483,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 97,
    "id": "1dec3b99-651c-4b35-94fe-f53993026e12",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "749          health and hygiene   6.11  "
       ]
      },
-     "execution_count": 484,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 98,
    "id": "2075f1f6-3527-4727-8da7-e91a6a357993",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "[200 rows x 5 columns]"
       ]
      },
-     "execution_count": 485,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 99,
    "id": "54b82448-5478-48fb-a729-cebb3351f0f7",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 100,
    "id": "7e3a2939-9aa2-4a93-8b46-3cb77161e6f2",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 101,
    "id": "10584c97-db52-49ab-871c-2309d180e573",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "       'cosmetic', 'appliances', 'toolss', nan], dtype=object)"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 102,
    "id": "9fc80c7e-6292-4b28-9bd7-5f7b927f1022",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "684                       furniture  38.07  "
       ]
      },
-     "execution_count": 489,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 103,
    "id": "56cfccf3-b920-4ed1-85b2-24c653ae4748",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        "[162 rows x 5 columns]"
       ]
      },
-     "execution_count": 490,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 104,
    "id": "eb56d8b0-a829-49ed-a94b-38461c232a27",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 105,
    "id": "66805432-bfc1-4092-868d-3ea1c48cac78",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 106,
    "id": "0685cc96-2f9e-45e3-a9ca-9b4b9f63c608",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 107,
    "id": "7521b747-0e19-46b4-8499-fc56186eddb6",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 108,
    "id": "6d260300-d47f-4451-8585-52c3df92cbdd",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 109,
    "id": "ff1b2ce1-24f9-4dc6-bd02-82f41252cc88",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 110,
    "id": "468ec14d-48eb-466e-84ee-c790e7d96230",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 111,
    "id": "1a58133d-aa13-407c-903e-498535d6272c",
    "metadata": {},
    "outputs": [],
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 112,
    "id": "84851ede-39c8-460f-8b6f-46ddaaa0f260",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 113,
    "id": "44e6b36c-e821-429f-943a-04a8b2cd9023",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 114,
    "id": "4df5b39c-e333-4473-8a27-e7d8e583b69a",
    "metadata": {},
    "outputs": [],
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 115,
    "id": "ac240239-8088-49e1-aca0-49fa1ff23827",
    "metadata": {},
    "outputs": [
@@ -1262,19 +1262,19 @@
        "565  PRODUCT00534      balloon       others   8.13"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#checking product with other product type\n",
-    "df_product.loc[df_product[\"product_type\"] == \"others\"]"
+    "df_product.loc[df_product['product_type'] == 'others']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 116,
    "id": "e53aff3c-aa1d-42f5-b025-ce91541efd39",
    "metadata": {},
    "outputs": [],
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 117,
    "id": "69d48ce3-b3bd-42a3-9e9f-f9052bca5d9a",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
        "       'cleaning materials', 'appliances'], dtype=object)"
       ]
      },
-     "execution_count": 504,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "9cf6a549-68e2-40b2-851d-930d4e72a35c",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 119,
    "id": "fa5b8a7d-403d-4049-9fef-1f797ee837ce",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 120,
    "id": "30a818f7-4183-47fd-84d3-d352ab50902a",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 121,
    "id": "b78039c9-2e34-4f47-9cb8-f41633ff8de3",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "01a840e1-65c8-439c-93ff-8db996c01442",
    "metadata": {},
    "outputs": [],
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 123,
    "id": "1c06fec6-3b6c-4b63-b4a6-9ec0e37ab980",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1496,7 @@
        "677  PRODUCT20986        mouse pad                 accessories   5.74"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 124,
    "id": "3c89318d-94f7-4ea7-9f8b-aae114cca32a",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 125,
    "id": "40e0e9c6-6168-4bf7-86d5-a02a6e084d1a",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 126,
    "id": "1fcfe620-7c5f-434f-81d1-18fc109fc90a",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 127,
    "id": "4a8941c0-58ee-4844-9998-0cbe877347be",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "e15089cf-4e58-4a4e-84f5-e2fbe3c86efd",
    "metadata": {},
    "outputs": [],
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 129,
    "id": "48cdac6f-1a4b-4172-8c32-87379ef8adbd",
    "metadata": {},
    "outputs": [],
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 130,
    "id": "7066d437-3b69-4653-afea-8199da40adeb",
    "metadata": {},
    "outputs": [],
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 131,
    "id": "68ed529e-6f4c-4a3c-b6db-ed8f1d5399e5",
    "metadata": {},
    "outputs": [
@@ -1922,7 +1922,7 @@
        "75  READY-MADE FOOD   7.29  "
       ]
      },
-     "execution_count": 515,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "id": "f86c0d75-5112-4a4a-8fa6-ef4a8a308b97",
    "metadata": {},
    "outputs": [],
@@ -1943,11 +1943,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "c99cff0b-24ff-41d6-a125-5d77a1c98ad7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_product.to_parquet(\"product_final_list.parquet\")"
+   ]
   }
  ],
  "metadata": {
