--- a/data/business_department/product_list.ipynb
+++ b/data/business_department/product_list.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 1,
    "id": "40fe55aa-9cd8-4a9d-ac2c-2c206817e3a0",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 2,
    "id": "05c6f1c3-3d98-4af1-9e0b-afcb85dbdb5d",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 3,
    "id": "a720d91e-a587-41ea-8864-360435f4f10e",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 4,
    "id": "0451d5d8-9e56-4858-8318-d0b0d6accfa6",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 5,
    "id": "1b13f573-1332-4b01-bbf7-a42a113f4464",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "9  readymade_breakfast   6.78  "
       ]
      },
-     "execution_count": 483,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 6,
    "id": "1dec3b99-651c-4b35-94fe-f53993026e12",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "749          health and hygiene   6.11  "
       ]
      },
-     "execution_count": 484,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 7,
    "id": "2075f1f6-3527-4727-8da7-e91a6a357993",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
        "[200 rows x 5 columns]"
       ]
      },
-     "execution_count": 485,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 8,
    "id": "54b82448-5478-48fb-a729-cebb3351f0f7",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 9,
    "id": "7e3a2939-9aa2-4a93-8b46-3cb77161e6f2",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 10,
    "id": "10584c97-db52-49ab-871c-2309d180e573",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "       'cosmetic', 'appliances', 'toolss', nan], dtype=object)"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 11,
    "id": "9fc80c7e-6292-4b28-9bd7-5f7b927f1022",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "684                       furniture  38.07  "
       ]
      },
-     "execution_count": 489,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 12,
    "id": "56cfccf3-b920-4ed1-85b2-24c653ae4748",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
        "[162 rows x 5 columns]"
       ]
      },
-     "execution_count": 490,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 13,
    "id": "eb56d8b0-a829-49ed-a94b-38461c232a27",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 14,
    "id": "66805432-bfc1-4092-868d-3ea1c48cac78",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 15,
    "id": "0685cc96-2f9e-45e3-a9ca-9b4b9f63c608",
    "metadata": {},
    "outputs": [],
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 16,
    "id": "7521b747-0e19-46b4-8499-fc56186eddb6",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 17,
    "id": "6d260300-d47f-4451-8585-52c3df92cbdd",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 18,
    "id": "ff1b2ce1-24f9-4dc6-bd02-82f41252cc88",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 19,
    "id": "468ec14d-48eb-466e-84ee-c790e7d96230",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 20,
    "id": "1a58133d-aa13-407c-903e-498535d6272c",
    "metadata": {},
    "outputs": [],
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 21,
    "id": "84851ede-39c8-460f-8b6f-46ddaaa0f260",
    "metadata": {},
    "outputs": [],
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 22,
    "id": "44e6b36c-e821-429f-943a-04a8b2cd9023",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 23,
    "id": "4df5b39c-e333-4473-8a27-e7d8e583b69a",
    "metadata": {},
    "outputs": [],
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 24,
    "id": "ac240239-8088-49e1-aca0-49fa1ff23827",
    "metadata": {},
    "outputs": [
@@ -1262,19 +1262,19 @@
        "565  PRODUCT00534      balloon       others   8.13"
       ]
      },
-     "execution_count": 502,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#checking product with other product type\n",
-    "df_product.loc[df_product[\"product_type\"] == \"others\"]"
+    "df_product.loc[df_product['product_type'] == 'others']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 25,
    "id": "e53aff3c-aa1d-42f5-b025-ce91541efd39",
    "metadata": {},
    "outputs": [],
@@ -1285,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 26,
    "id": "69d48ce3-b3bd-42a3-9e9f-f9052bca5d9a",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1299,7 @@
        "       'cleaning materials', 'appliances'], dtype=object)"
       ]
      },
-     "execution_count": 504,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "9cf6a549-68e2-40b2-851d-930d4e72a35c",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 28,
    "id": "fa5b8a7d-403d-4049-9fef-1f797ee837ce",
    "metadata": {},
    "outputs": [
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 29,
    "id": "30a818f7-4183-47fd-84d3-d352ab50902a",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 30,
    "id": "b78039c9-2e34-4f47-9cb8-f41633ff8de3",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "01a840e1-65c8-439c-93ff-8db996c01442",
    "metadata": {},
    "outputs": [],
@@ -1408,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 32,
    "id": "1c06fec6-3b6c-4b63-b4a6-9ec0e37ab980",
    "metadata": {},
    "outputs": [
@@ -1496,7 +1496,7 @@
        "677  PRODUCT20986        mouse pad                 accessories   5.74"
       ]
      },
-     "execution_count": 508,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 33,
    "id": "3c89318d-94f7-4ea7-9f8b-aae114cca32a",
    "metadata": {},
    "outputs": [],
@@ -1526,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 34,
    "id": "40e0e9c6-6168-4bf7-86d5-a02a6e084d1a",
    "metadata": {},
    "outputs": [],
@@ -1537,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 35,
    "id": "1fcfe620-7c5f-434f-81d1-18fc109fc90a",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 36,
    "id": "4a8941c0-58ee-4844-9998-0cbe877347be",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "e15089cf-4e58-4a4e-84f5-e2fbe3c86efd",
    "metadata": {},
    "outputs": [],
@@ -1590,7 +1590,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 38,
+   "id": "4ca8243f-6681-40cc-a8b1-64d3847c9d5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#renaming columns\n",
+    "df_product = df_product.rename(columns={'price':'product_price'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "48cdac6f-1a4b-4172-8c32-87379ef8adbd",
    "metadata": {},
    "outputs": [],
@@ -1600,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 40,
    "id": "7066d437-3b69-4653-afea-8199da40adeb",
    "metadata": {},
    "outputs": [],
@@ -1610,7 +1621,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 515,
+   "execution_count": 41,
+   "id": "581ef287-22b5-4437-b79e-5b8c9bd4719a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uppercase all columns\n",
+    "df_product.columns = df_product.columns.str.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "68ed529e-6f4c-4a3c-b6db-ed8f1d5399e5",
    "metadata": {},
    "outputs": [
@@ -1635,10 +1657,10 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>product_id</th>\n",
-       "      <th>product_name</th>\n",
-       "      <th>product_type</th>\n",
-       "      <th>price</th>\n",
+       "      <th>PRODUCT_ID</th>\n",
+       "      <th>PRODUCT_NAME</th>\n",
+       "      <th>PRODUCT_TYPE</th>\n",
+       "      <th>PRODUCT_PRICE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1857,7 +1879,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      product_id                                     product_name  \\\n",
+       "      PRODUCT_ID                                     PRODUCT_NAME  \\\n",
        "0   PRODUCT16794                   GRANDMAS SWEDISH THIN PANCAKES   \n",
        "3   PRODUCT52912                         BEST BUTTERMILK PANCAKES   \n",
        "8   PRODUCT17375                                      BAKED PEARS   \n",
@@ -1889,40 +1911,40 @@
        "70  PRODUCT31756           CREAMY SCRAMBLED EGGS IN THE MICROWAVE   \n",
        "75  PRODUCT58777  BREAKFAST CASSEROLE SEASONED WITH COUNTRY GRAVY   \n",
        "\n",
-       "       product_type  price  \n",
-       "0   READY-MADE FOOD  12.81  \n",
-       "3   READY-MADE FOOD   5.83  \n",
-       "8   READY-MADE FOOD   9.92  \n",
-       "9   READY-MADE FOOD   6.78  \n",
-       "11  READY-MADE FOOD   7.53  \n",
-       "17  READY-MADE FOOD  10.95  \n",
-       "22  READY-MADE FOOD   6.82  \n",
-       "24  READY-MADE FOOD   8.83  \n",
-       "26  READY-MADE FOOD  11.60  \n",
-       "29  READY-MADE FOOD  13.87  \n",
-       "32  READY-MADE FOOD  13.33  \n",
-       "33  READY-MADE FOOD  11.69  \n",
-       "35  READY-MADE FOOD  15.41  \n",
-       "38  READY-MADE FOOD  14.25  \n",
-       "41  READY-MADE FOOD   8.87  \n",
-       "42  READY-MADE FOOD  11.94  \n",
-       "45  READY-MADE FOOD  10.80  \n",
-       "49  READY-MADE FOOD   6.01  \n",
-       "50  READY-MADE FOOD  10.61  \n",
-       "51  READY-MADE FOOD   6.80  \n",
-       "53  READY-MADE FOOD   8.01  \n",
-       "54  READY-MADE FOOD  12.29  \n",
-       "57  READY-MADE FOOD   9.39  \n",
-       "60  READY-MADE FOOD  10.15  \n",
-       "61  READY-MADE FOOD   8.87  \n",
-       "64  READY-MADE FOOD  15.29  \n",
-       "66  READY-MADE FOOD   5.89  \n",
-       "68  READY-MADE FOOD   8.44  \n",
-       "70  READY-MADE FOOD   5.73  \n",
-       "75  READY-MADE FOOD   7.29  "
+       "       PRODUCT_TYPE  PRODUCT_PRICE  \n",
+       "0   READY-MADE FOOD          12.81  \n",
+       "3   READY-MADE FOOD           5.83  \n",
+       "8   READY-MADE FOOD           9.92  \n",
+       "9   READY-MADE FOOD           6.78  \n",
+       "11  READY-MADE FOOD           7.53  \n",
+       "17  READY-MADE FOOD          10.95  \n",
+       "22  READY-MADE FOOD           6.82  \n",
+       "24  READY-MADE FOOD           8.83  \n",
+       "26  READY-MADE FOOD          11.60  \n",
+       "29  READY-MADE FOOD          13.87  \n",
+       "32  READY-MADE FOOD          13.33  \n",
+       "33  READY-MADE FOOD          11.69  \n",
+       "35  READY-MADE FOOD          15.41  \n",
+       "38  READY-MADE FOOD          14.25  \n",
+       "41  READY-MADE FOOD           8.87  \n",
+       "42  READY-MADE FOOD          11.94  \n",
+       "45  READY-MADE FOOD          10.80  \n",
+       "49  READY-MADE FOOD           6.01  \n",
+       "50  READY-MADE FOOD          10.61  \n",
+       "51  READY-MADE FOOD           6.80  \n",
+       "53  READY-MADE FOOD           8.01  \n",
+       "54  READY-MADE FOOD          12.29  \n",
+       "57  READY-MADE FOOD           9.39  \n",
+       "60  READY-MADE FOOD          10.15  \n",
+       "61  READY-MADE FOOD           8.87  \n",
+       "64  READY-MADE FOOD          15.29  \n",
+       "66  READY-MADE FOOD           5.89  \n",
+       "68  READY-MADE FOOD           8.44  \n",
+       "70  READY-MADE FOOD           5.73  \n",
+       "75  READY-MADE FOOD           7.29  "
       ]
      },
-     "execution_count": 515,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,18 +1955,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f86c0d75-5112-4a4a-8fa6-ef4a8a308b97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_product.to_parquet(\"product_upper.parquet\")"
+    "df_product.to_parquet(\"product_column_structure.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c99cff0b-24ff-41d6-a125-5d77a1c98ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_product.to_parquet(\"product_final_list.parquet\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c99cff0b-24ff-41d6-a125-5d77a1c98ad7",
+   "id": "1c112f60-b74b-4d39-8f48-586ed62dce04",
    "metadata": {},
    "outputs": [],
    "source": []
