order dimension (missing campaign_availed)

--- a/data_pipeline/data_pipeline_operations_department/data_cleaning_operations_department.ipynb
+++ b/data_pipeline/data_pipeline_operations_department/data_cleaning_operations_department.ipynb
@@ -5,7 +5,7 @@
    "id": "3b24969b-e282-4b38-8b56-4dd13fbcb7a9",
    "metadata": {},
    "source": [
-    "# Cleaning Operations Department"
+    "# Clean: Operations Department"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 1,
    "id": "4f9d00af-fbff-4abb-b128-bf38c5161c61",
    "metadata": {},
    "outputs": [
@@ -49,9 +49,9 @@
     "import numpy as np\n",
     "\n",
     "# load and concat line_item_data_prices.*\n",
-    "df_line_item_data_prices1 = pd.read_csv('../data/operations_department/line_item_data_prices1.csv')\n",
-    "df_line_item_data_prices2 = pd.read_csv('../data/operations_department/line_item_data_prices2.csv')\n",
-    "df_line_item_data_prices3 = pd.read_parquet('../data/operations_department/line_item_data_prices3.parquet')\n",
+    "df_line_item_data_prices1 = pd.read_csv('../../data/operations_department/line_item_data_prices1.csv')\n",
+    "df_line_item_data_prices2 = pd.read_csv('../../data/operations_department/line_item_data_prices2.csv')\n",
+    "df_line_item_data_prices3 = pd.read_parquet('../../data/operations_department/line_item_data_prices3.parquet')\n",
     "print(\"Succesfuly Loaded line_item_data_prices (3 files)\")\n",
     "df_line_item_data_prices_concat = pd.concat([df_line_item_data_prices1, df_line_item_data_prices2, df_line_item_data_prices3])\n",
     "df_line_item_data_prices_concat.rename( columns={'Unnamed: 0':'index'}, inplace=True ) # add name to index column\n",
@@ -61,9 +61,9 @@
     "print(\"Succesfuly Concatinated line_item_data_prices (3 files)\")\n",
     "\n",
     "# load and concat line_item_data_products.*\n",
-    "df_line_item_data_products1 = pd.read_csv('../data/operations_department/line_item_data_products1.csv')\n",
-    "df_line_item_data_products2 = pd.read_csv('../data/operations_department/line_item_data_products2.csv')\n",
-    "df_line_item_data_products3 = pd.read_parquet('../data/operations_department/line_item_data_products3.parquet')\n",
+    "df_line_item_data_products1 = pd.read_csv('../../data/operations_department/line_item_data_products1.csv')\n",
+    "df_line_item_data_products2 = pd.read_csv('../../data/operations_department/line_item_data_products2.csv')\n",
+    "df_line_item_data_products3 = pd.read_parquet('../../data/operations_department/line_item_data_products3.parquet')\n",
     "print(\"Succesfuly Loaded line_item_data_products (3 files)\")\n",
     "df_line_item_data_products_concat = pd.concat([df_line_item_data_products1, df_line_item_data_products2, df_line_item_data_products3])\n",
     "df_line_item_data_products_concat.rename( columns={'Unnamed: 0':'index'}, inplace=True ) # add name to index column\n",
@@ -72,12 +72,12 @@
     "print(\"Succesfuly Concatinated line_item_data_products (3 files)\")\n",
     "\n",
     "# load and concat order_data_.*\n",
-    "df_order_data1 = pd.read_parquet('../data/operations_department/order_data_20200101-20200701.parquet')\n",
-    "df_order_data2 = pd.read_pickle('../data/operations_department/order_data_20200701-20211001.pickle')\n",
-    "df_order_data3 = pd.read_csv('../data/operations_department/order_data_20211001-20220101.csv')\n",
-    "df_order_data4 = pd.read_excel('../data/operations_department/order_data_20220101-20221201.xlsx')\n",
-    "df_order_data5 = pd.read_json('../data/operations_department/order_data_20221201-20230601.json')\n",
-    "df_order_data6_list = pd.read_html('../data/operations_department/order_data_20230601-20240101.html')\n",
+    "df_order_data1 = pd.read_parquet('../../data/operations_department/order_data_20200101-20200701.parquet')\n",
+    "df_order_data2 = pd.read_pickle('../../data/operations_department/order_data_20200701-20211001.pickle')\n",
+    "df_order_data3 = pd.read_csv('../../data/operations_department/order_data_20211001-20220101.csv')\n",
+    "df_order_data4 = pd.read_excel('../../data/operations_department/order_data_20220101-20221201.xlsx')\n",
+    "df_order_data5 = pd.read_json('../../data/operations_department/order_data_20221201-20230601.json')\n",
+    "df_order_data6_list = pd.read_html('../../data/operations_department/order_data_20230601-20240101.html')\n",
     "df_order_data6 = df_order_data6_list[0]\n",
     "print(\"Succesfuly Loaded order_data (6 files)\")\n",
     "df_order_data_concat = pd.concat([df_order_data1, df_order_data2, df_order_data3, df_order_data4, df_order_data5, df_order_data6])\n",
@@ -88,7 +88,7 @@
     "print(\"Succesfuly Concatinated order_data (6 files)\")\n",
     "\n",
     "# load order_delays.html\n",
-    "df_order_delays_list = pd.read_html('../data/operations_department/order_delays.html')\n",
+    "df_order_delays_list = pd.read_html('../../data/operations_department/order_delays.html')\n",
     "df_order_delays = df_order_delays_list[0]\n",
     "df_order_delays.rename( columns={'Unnamed: 0':'index'}, inplace=True ) # add name to index column\n",
     "df_order_delays.drop([\"index\"], axis=1, inplace=True) #remove index\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "id": "97b695c5-9393-46e9-acc0-c238e85a377d",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(200000, 2)\n"
+      "(500000, 4)\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 500000 entries, 0 to 499999\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column             Non-Null Count   Dtype \n",
+      "---  ------             --------------   ----- \n",
+      " 0   ORDER_ID           500000 non-null  object\n",
+      " 1   USER_ID            500000 non-null  object\n",
+      " 2   ESTIMATED ARRIVAL  500000 non-null  object\n",
+      " 3   TRANSACTION_DATE   500000 non-null  object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 15.3+ MB\n"
      ]
     }
    ],
@@ -194,7 +205,8 @@
     "# print(df_order_data4.shape)\n",
     "# print(df_order_data5.shape)\n",
     "# print(df_order_data6.shape)\n",
-    "#print(df_order_data_concat.shape)\n",
+    "print(df_order_data_concat.shape)\n",
+    "df_order_data_concat.info()\n",
     "\n",
     "# print(df_order_delays.shape)"
    ]
@@ -1589,7 +1601,7 @@
    "id": "86a138ba-432e-4bed-b632-f331b80812d4",
    "metadata": {},
    "source": [
-    "# Separate Cleaned Data into respective tables for loading to Data Warehouse"
+    "# Separate Cleaned Data into respective tables for checking"
    ]
   },
   {
@@ -1607,10 +1619,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 318,
    "id": "796151c0-d8e7-42a9-afc5-480d988eab72",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(483727, 4)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1694,7 +1713,7 @@
        "4       2020-05-24  "
       ]
      },
-     "execution_count": 298,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,15 +1721,23 @@
    "source": [
     "df_order_data = df_order_data.drop_duplicates(subset=['ORDER_ID'], keep='first')\n",
     "df_order_data.reset_index(drop=True, inplace=True)\n",
+    "print(df_order_data.shape)\n",
     "df_order_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 316,
    "id": "2ff1332f-2822-4489-8db9-48b7dc6e178d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(174082, 2)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1775,7 +1802,7 @@
        "4  B6221277-F3A0-452E-AC7F-288F49F565D1              1"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1785,13 +1812,14 @@
     "# Delete rows where 'DELAY_IN_DAYS' is 0\n",
     "df_order_delays = df_order_delays[df_order_delays['DELAY_IN_DAYS'] != 0]\n",
     "df_order_delays.reset_index(drop=True, inplace=True)\n",
+    "print(df_order_delays.shape)\n",
     "df_order_delays.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
-   "id": "c3b9d0b7-afed-4279-aac5-d7482f01fd75",
+   "execution_count": 314,
+   "id": "945d7f66-2eee-4ce8-aeab-75918d385667",
    "metadata": {},
    "outputs": [
     {
@@ -1871,21 +1899,20 @@
        "4  62B8FABF-4E0A-4383-8B3A-7276C77F9E8C   5.74         3"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 314,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "print(df_line_item_data_prices.shape)\n",
     "df_line_item_data_prices.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
-   "id": "1ccf088c-a8e6-4f53-b6b9-eb37267d2fe6",
+   "execution_count": 315,
+   "id": "b850399d-5734-4597-9d89-2e1a8df9a725",
    "metadata": {},
    "outputs": [
     {
@@ -1965,13 +1992,12 @@
        "4  62B8FABF-4E0A-4383-8B3A-7276C77F9E8C  LEATHER WALLET  PRODUCT45904"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "print(df_line_item_data_products.shape)\n",
     "df_line_item_data_products.head()"
    ]
@@ -1981,13 +2007,277 @@
    "id": "1accd8e8-71c1-4d1a-9b7e-193c9bb2caa5",
    "metadata": {},
    "source": [
-    "# Order Dimension"
+    "# Load: Create Order Dimension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "id": "a2f4040b-9423-420d-8294-86dff5d429bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aggregating data for order_dimension\n",
+    "order_dimension = df_drop_duplicate_products.groupby('ORDER_ID').agg({\n",
+    "    'PRICE': 'sum',\n",
+    "    'QUANTITY': 'sum',\n",
+    "    'DELAY_IN_DAYS': 'first',  # Assuming DELAY_IN_DAYS is the same for all rows with the same ORDER_ID\n",
+    "    'TRANSACTION_DATE': 'first',  # Assuming TRANSACTION_DATE is the same for all rows with the same ORDER_ID\n",
+    "    'ESTIMATED_ARRIVAL': 'first'  # Assuming ESTIMATED_ARRIVAL is the same for all rows with the same ORDER_ID\n",
+    "}).reset_index()\n",
+    "\n",
+    "# Rename the columns to match your specifications\n",
+    "order_dimension = order_dimension.rename(columns={\n",
+    "    'PRICE': 'ORDER_PRICE',\n",
+    "    'QUANTITY': 'ORDER_QUANTITY',\n",
+    "    'DELAY_IN_DAYS': 'ORDER_DELAY',\n",
+    "    'TRANSACTION_DATE': 'ORDER_DATE',\n",
+    "    'ESTIMATED_ARRIVAL': 'ORDER_EST_ARRIVAL'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "918b7de8-0041-49d9-a805-2eb84e224f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(483727, 6)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ORDER_ID</th>\n",
+       "      <th>ORDER_PRICE</th>\n",
+       "      <th>ORDER_QUANTITY</th>\n",
+       "      <th>ORDER_DELAY</th>\n",
+       "      <th>ORDER_DATE</th>\n",
+       "      <th>ORDER_EST_ARRIVAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00002264-81A7-43B0-9864-F01E255CCDB2</td>\n",
+       "      <td>82.74</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>15 DAYS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0000B7E2-BDE6-4B89-9D63-44BD1E1391C2</td>\n",
+       "      <td>78.14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-10-01</td>\n",
+       "      <td>12 DAYS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0000C94F-7C05-49A4-97AC-528AD3DB8211</td>\n",
+       "      <td>18.99</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-06-26</td>\n",
+       "      <td>13 DAYS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000124AD-7D0B-4F5E-8150-A26D70BAFC26</td>\n",
+       "      <td>69.76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2022-09-19</td>\n",
+       "      <td>3 DAYS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00014C29-5A9A-40B6-AF7B-D26AFA3E1914</td>\n",
+       "      <td>61.73</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-07-10</td>\n",
+       "      <td>12 DAYS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               ORDER_ID  ORDER_PRICE  ORDER_QUANTITY  \\\n",
+       "0  00002264-81A7-43B0-9864-F01E255CCDB2        82.74               8   \n",
+       "1  0000B7E2-BDE6-4B89-9D63-44BD1E1391C2        78.14              15   \n",
+       "2  0000C94F-7C05-49A4-97AC-528AD3DB8211        18.99               6   \n",
+       "3  000124AD-7D0B-4F5E-8150-A26D70BAFC26        69.76               3   \n",
+       "4  00014C29-5A9A-40B6-AF7B-D26AFA3E1914        61.73               8   \n",
+       "\n",
+       "   ORDER_DELAY ORDER_DATE ORDER_EST_ARRIVAL  \n",
+       "0            3 2020-06-23           15 DAYS  \n",
+       "1            2 2020-10-01           12 DAYS  \n",
+       "2            0 2022-06-26           13 DAYS  \n",
+       "3            6 2022-09-19            3 DAYS  \n",
+       "4            0 2022-07-10           12 DAYS  "
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(order_dimension.shape)\n",
+    "order_dimension.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "af531a66-1fe1-42b0-a90a-2e161f58fb81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ORDER_ID</th>\n",
+       "      <th>USER_ID</th>\n",
+       "      <th>ESTIMATED_ARRIVAL</th>\n",
+       "      <th>TRANSACTION_DATE</th>\n",
+       "      <th>PRODUCT_NAME</th>\n",
+       "      <th>PRODUCT_ID</th>\n",
+       "      <th>PRICE</th>\n",
+       "      <th>QUANTITY</th>\n",
+       "      <th>DELAY_IN_DAYS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18588</th>\n",
+       "      <td>00002264-81A7-43B0-9864-F01E255CCDB2</td>\n",
+       "      <td>USER20400</td>\n",
+       "      <td>15 DAYS</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>PEARL NECKLACE</td>\n",
+       "      <td>PRODUCT27175</td>\n",
+       "      <td>10.11</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18589</th>\n",
+       "      <td>00002264-81A7-43B0-9864-F01E255CCDB2</td>\n",
+       "      <td>USER20400</td>\n",
+       "      <td>15 DAYS</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>SPONGE</td>\n",
+       "      <td>PRODUCT46596</td>\n",
+       "      <td>17.28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18590</th>\n",
+       "      <td>00002264-81A7-43B0-9864-F01E255CCDB2</td>\n",
+       "      <td>USER20400</td>\n",
+       "      <td>15 DAYS</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>CAN OF WHIPPED CREAM</td>\n",
+       "      <td>PRODUCT36555</td>\n",
+       "      <td>17.28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18591</th>\n",
+       "      <td>00002264-81A7-43B0-9864-F01E255CCDB2</td>\n",
+       "      <td>USER20400</td>\n",
+       "      <td>15 DAYS</td>\n",
+       "      <td>2020-06-23</td>\n",
+       "      <td>DOMINO SET</td>\n",
+       "      <td>PRODUCT00909</td>\n",
+       "      <td>38.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   ORDER_ID    USER_ID ESTIMATED_ARRIVAL  \\\n",
+       "18588  00002264-81A7-43B0-9864-F01E255CCDB2  USER20400           15 DAYS   \n",
+       "18589  00002264-81A7-43B0-9864-F01E255CCDB2  USER20400           15 DAYS   \n",
+       "18590  00002264-81A7-43B0-9864-F01E255CCDB2  USER20400           15 DAYS   \n",
+       "18591  00002264-81A7-43B0-9864-F01E255CCDB2  USER20400           15 DAYS   \n",
+       "\n",
+       "      TRANSACTION_DATE          PRODUCT_NAME    PRODUCT_ID  PRICE  QUANTITY  \\\n",
+       "18588       2020-06-23        PEARL NECKLACE  PRODUCT27175  10.11         2   \n",
+       "18589       2020-06-23                SPONGE  PRODUCT46596  17.28         2   \n",
+       "18590       2020-06-23  CAN OF WHIPPED CREAM  PRODUCT36555  17.28         2   \n",
+       "18591       2020-06-23            DOMINO SET  PRODUCT00909  38.07         2   \n",
+       "\n",
+       "       DELAY_IN_DAYS  \n",
+       "18588              3  \n",
+       "18589              3  \n",
+       "18590              3  \n",
+       "18591              3  "
+      ]
+     },
+     "execution_count": 321,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_drop_duplicate_products.loc[df_drop_duplicate_products['ORDER_ID'] == '00002264-81A7-43B0-9864-F01E255CCDB2']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f4040b-9423-420d-8294-86dff5d429bf",
+   "id": "513c5cee-739a-4ddb-9094-5b2c3255506c",
    "metadata": {},
    "outputs": [],
    "source": []
