created python files

--- a/data/enterprise_department/Mercant_Data.ipynb
+++ b/data/enterprise_department/Mercant_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f8931126-6ad4-477c-8c48-3a4fd6bb1067",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "56f0dccd-8f0c-4fb5-a522-350fa747b6e4",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,16 @@
    "outputs": [],
    "source": [
     "df_merchant.loc[:,'creation_date'] = pd.to_datetime(df_merchant['creation_date']).dt.date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32758d6f-8fad-41a2-bb0c-9521e0e59bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merchant.to_parquet(\"convert_to_date.parquet\")"
    ]
   },
   {
@@ -69,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "096883e6-49f5-407e-95a0-1acf5c2eb0ca",
    "metadata": {},
    "outputs": [],
@@ -79,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ddfe7127-1c4a-42f3-b016-872b7dca1163",
    "metadata": {},
    "outputs": [],
@@ -128,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
