--- a/data/enterprise_department/Order_With_Merchant.ipynb
+++ b/data/enterprise_department/Order_With_Merchant.ipynb
@@ -21,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data1 = pd.read_parquet(\"order_with_merchant_data1.parquet\")\n",
-    "df_data2 = pd.read_parquet(\"order_with_merchant_data2.parquet\")\n",
-    "df_data3 = pd.read_csv(\"order_with_merchant_data3.csv\")\n",
+    "df_data1 = pd.read_parquet('../../../data/enterprise_department/order_with_merchant_data1.parquet')\n",
+    "df_data2 = pd.read_parquet('../../../data/enterprise_department/order_with_merchant_data2.parquet')\n",
+    "df_data3 = pd.read_csv('../../../data/enterprise_department/order_with_merchant_data3.csv')\n",
     "\n",
     "appended_df = pd.concat([df_data1, df_data2, df_data3], ignore_index=True)"
    ]
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
