--- a/data/enterprise_department/Staff_Data.ipynb
+++ b/data/enterprise_department/Staff_Data.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_staff_list = pd.read_html('staff_data.html')\n",
+    "df_staff_list = pd.read_html('../../../data/enterprise_department/staff_data.html')\n",
     "df_staff = df_staff_list[0]"
    ]
   },
@@ -129,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
